editors/tree-sitter-ral/grammar.js
    source_file: $ => repeat(choice(
      seq($.statement, /[\n;]+/),
      $.statement,
      /[\n;]+/,
    )),

    statement: $ => $.chain,

    chain: $ => prec.left(seq(
      $.pipeline,
      repeat(seq('?', optional(/\n+/), $.pipeline)),
    )),

    pipeline: $ => prec.left(seq(
      $.cmd,
      repeat(seq('|', optional(/\n+/), $.cmd)),
    )),

    cmd: $ => choice(
      $.let_stmt,
      $.return_stmt,
      $.if_stmt,
      $.case_stmt,
      $.application,
    ),

    let_stmt: $ => seq(
      'let',
      $._pattern,
      '=',
      optional(/\n+/),
      $.chain,
    ),

    return_stmt: $ => prec.right(seq(
      'return',
      optional($._value),
    )),

    // if cond then [elsif cond then]* [else atom]?
    // Both `then` and `else` branches are atoms — typically blocks or !{…}.
    // Newlines may separate 'if'/'elsif' from their condition, and the
    // condition from its body, mirroring Parser::parse_if_branch (SPEC §3.3).
    if_stmt: $ => prec.right(seq(
      'if',
      optional(/\n+/),
      field('cond', $._value),
      optional(/\n+/),
      field('then', $._value),
      repeat($.elsif_clause),
      optional($.else_clause),
    )),

    // A newline before 'elsif'/'else' reads equally well as the separator
    // ending the previous statement, and tree-sitter silently always chose
    // that — so a clause starting on its own line parsed as a bare command
    // named `elsif`. Bundling the newline run into the keyword's own token
    // hands the choice to the lexer, which can look past the run and match
    // only when the keyword is really there. The alias keeps the visible
    // node type bare, so `"elsif" @keyword` still fires; its span reaches
    // back over the swallowed whitespace, which has no glyph to mis-color.
    elsif_clause: $ => seq(
      choice('elsif', alias(token(seq(/\n+/, /[ \t\r]*/, 'elsif')), 'elsif')),
      optional(/\n+/),
      field('cond', $._value),
      optional(/\n+/),
      field('then', $._value),
    ),

    else_clause: $ => seq(
      choice('else', alias(token(seq(/\n+/, /[ \t\r]*/, 'else')), 'else')),
      optional(/\n+/),
      field('body', $._value),
    ),

    // case scrutinee [`tag: body, ...]
    //
    // The arm list is a production of its own and no value stands in its
    // place: a computed table (`case $x $handlers`), a `...` spread arm, and
    // an empty list are all parse errors, because each hides the set of
    // alternatives that makes exhaustiveness decidable (SPEC §8.3).  A
    // repeated tag is refused by the real parser and not here — tree-sitter
    // compares no two arms.
    // Newlines may separate the scrutinee from the list, and the arms from
    // each other (SPEC §3.3).
    case_stmt: $ => seq(
      'case',
      optional(/\n+/),
      field('scrutinee', $._value),
      optional(/\n+/),
      '[',
      optional(/\n+/),
      field('arm', $.case_arm),
      repeat(seq(',', optional(/\n+/), field('arm', $.case_arm))),
      optional(','),
      optional(/\n+/),
      ']',
    ),

    // `tag: { |payload| … } — or any other atom, which the arm applies to the
    // payload.  The tag is a bare label rather than a `tag` value: a tag takes
    // the next adjacent atom as its payload, and would swallow the arm's body.
    case_arm: $ => seq(
      field('tag', $.tag_label),
      ':',
      field('body', choice($.case_arm_lambda, $.word_bracket, $._value_nonblock)),
    ),

    // A brace body is the arm's own binder form, not a block: it binds exactly
    // one payload, where a block binds any number or none.  Hence the arm's
    // other spellings come from `_value_nonblock`, and the binder is written
    // out here — aliased to `lambda_params` so one query highlights every
    // parameter list.
    case_arm_lambda: $ => seq(
      '{',
      field('binder', alias($._case_arm_binder, $.lambda_params)),
      optional($._block_body),
      '}',
    ),

    _case_arm_binder: $ => seq('|', $._pattern, '|'),

    // Head and arguments are the same syntactic class, except that only the
    // head may be a `^name` bypass (`head = '^' NAME | atom` — a bypass is
    // never a general value: `parse_word` rejects a bare '^' anywhere else).
    // Args additionally admit `...$x` spreads and redirects.
    application: $ => prec.left(seq(
      choice($.bypass, $._value),
      repeat(choice($._value, $.spread, $.redirect)),
    )),

    // ── Values ───────────────────────────────────────────────────────────────

    // Forked only on the bare-word leaf: `_value` is the default (`,` bare),
    // `_value_bracket` is for sites lexed directly inside an open `[...]`
    // (list/map literal elements, map-entry values) where the real lexer
    // instead treats `,` as the element separator.
    _value: $ => choice($.word, $._value_common),
    _value_nonblock: $ => choice(
      $.identifier,
      $.integer,
      $.float,
      $.boolean,
      $.unit_literal,
      $.string_single,
      $.string_double,
      $.tag,
      $.list_literal,
      $.map_literal,
      $.arith_expr,
      $.deref_paren,
      $.deref_index,
      $.deref,
      $.force_brace,
      $.force_bang,
      $.tilde,
      $.indexed,
    ),

    // Postfix indexing on a forced block: !{f $x}[k].  `$name[k]` is
    // captured by `deref_index`; `$(name)` takes no keys.
    _pattern: $ => choice(
      $.identifier,
      $.wildcard,
      $.list_pattern,
      $.map_pattern,
    ),

    list_pattern: $ => seq(
      '[',
      optional(seq(
        $._pattern_item,
        repeat(seq(',', $._pattern_item)),
        optional(','),
      )),
      ']',
    ),

    _pattern_item: $ => choice(
      $.rest_pattern,
      $._pattern,
    ),

    map_pattern: $ => seq(
      '[',
      $.map_pattern_entry,
      repeat(seq(',', $.map_pattern_entry)),
      optional(','),
      ']',
    ),

    // key: binding — e.g. [host: h, port: p].
    // Keys may be plain identifiers, single-quoted strings, or backtick tags.
    // The binder is its own field (mirroring map_entry's 'value') so a
    // highlight query can target it without also catching an identifier-
    // shaped key.
    map_pattern_entry: $ => seq(
      field('key', choice($.identifier, $.string_single, $.tag)),
      ':',
      optional(field('pattern', $._pattern)),
    ),

    // ── Redirects ────────────────────────────────────────────────────────────

    // fd-aware redirect: the source fd's digits are baked into the operator
    // token to avoid colliding with `integer` (`2>` vs the value `2`).
    block: $ => seq(
      '{',
      optional($.lambda_params),
      optional($._block_body),
      '}',
    ),

    lambda_params: $ => seq(
      '|',
      repeat1($._pattern),
      '|',
    ),

    _block_body: $ => seq(
      repeat(/[\n;]/),
      $.statement,
      repeat(seq(/[\n;]+/, optional($.statement))),
      repeat(/[\n;]/),
    ),

    // ── Collections ──────────────────────────────────────────────────────────

    // A list literal is '[' items ']' where items are values (not map entries).
    list_literal: $ => seq(
      '[',
      optional(/\n+/),
      optional(seq(
        $._list_item,
        repeat(seq(',', optional(/\n+/), $._list_item)),
        optional(','),
        optional(/\n+/),
      )),
      ']',
    ),

    _list_item: $ => choice($._value_bracket, $.spread),

    // A map literal is either '[:]' (empty) or '[entries...]' where each
    // entry is `key: value` or `...$expr` (spread). The parser classifies
    // record against map by the keys' form; a "string" or $deref key is data.
    tag_label: $ => token(seq('`', /[a-zA-Z_][a-zA-Z0-9_-]*/)),

    deref_index: $ => prec.left(seq(
      token(seq('$', IDENT)),
      repeat1(seq(token.immediate('['), optional(/[^\]\n]*/), ']')),
    )),

    // $name — plain dereference
    deref: $ => token(seq('$', IDENT)),

    // ── Force ────────────────────────────────────────────────────────────────

    // !{ stmts } — execute inline block
    force_brace: $ => seq(
      token(seq('!', '{')),
      optional($._block_body),
      '}',
    ),

    // !$name — force a stored thunk.  A `!` before anything else is the
    // literal character (in a string) or a force of that primary.
    identifier: $ => IDENT,

    integer: $ => /[0-9]+/,
