editors/tree-sitter-ral/test/corpus/deref_index.txt
================================================================================
$x[0] abutted is one indexed dereference
================================================================================

$x[0]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chain
      (pipeline
        (cmd
          (application
            (deref_index)))))))

================================================================================
$x [0] with a gap is a bare dereference followed by a list literal
================================================================================

$x [0]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chain
      (pipeline
        (cmd
          (application
            (deref))))))
  (statement
    (chain
      (pipeline
        (cmd
          (application
            (list_literal
              (integer))))))))

================================================================================
chained indices stay one deref_index only when every bracket abuts
================================================================================

$x[0][1]

--------------------------------------------------------------------------------

(source_file
  (statement
    (chain
      (pipeline
        (cmd
          (application
            (deref_index)))))))
